tests/baselines/reference/exportDefaultWithJSDoc1.errors.txt
tests/cases/compiler/a.js(6,43): error TS2719: Type 'import("tests/cases/compiler/a").NumberLike[]' is not assignable to type 'import("tests/cases/compiler/a").NumberLike[]'. Two different types with this name exist, but they are unrelated.
  Type 'import("tests/cases/compiler/a").NumberLike' is not assignable to type 'import("tests/cases/compiler/a").NumberLike'. Two different types with this name exist, but they are unrelated.


==== tests/cases/compiler/a.js (1 errors) ====
    /**
     * A number, or a string containing a number.
     * @typedef {(number|string)} NumberLike
     */
    
    /** @type {NumberLike[]} */export default ([ ]);
                                              ~~~~~
!!! error TS2719: Type 'import("tests/cases/compiler/a").NumberLike[]' is not assignable to type 'import("tests/cases/compiler/a").NumberLike[]'. Two different types with this name exist, but they are unrelated.
!!! error TS2719:   Type 'import("tests/cases/compiler/a").NumberLike' is not assignable to type 'import("tests/cases/compiler/a").NumberLike'. Two different types with this name exist, but they are unrelated.
    
==== tests/cases/compiler/b.ts (0 errors) ====
    import A from './a'
    A[0]